# SCAMP

./: meson.build  meson_options.txt
src/common/: common.cpp  common.h  scamp_interface.cpp  scamp_interface.h
src/core/: kernels.cu  kernels_compute.h  tile.h
src/core/cpu_kernel/: cpu_kernels.cpp
